# rbasic

./: .gitignore  BNF.md  CMakeLists.txt  Documentation_Update_Summary.md  Enhanced_FFI_Implementation_Summary.md  FFI_Analysis_Report.md  MANUAL.md  PROJECT_SUMMARY.md  RASPBERRY_PI.md  README.md  RPI_IMPLEMENTATION.md  SDL2_FFI_Analysis.md  SDL2_Implementation_Success.md  analysis_report.txt  assignment_debug.bas  binary_test.bas  build-on-pi.sh  build.bat  build.sh  console_test.cpp  debug_test.cpp  delay_test.bas  delay_test.txt  encoding_test.bas  enhanced_ffi_test.bas  exact_pattern_test.bas  exact_test.bas  file_debug.bas  file_io_test.bas  import_demo.bas  isolate_test.bas  minimal-test.json  minimal_core.bas  pi-toolchain.cmake  practical_ffi_test.bas  printf_test.cpp  raw_data.txt  repl_test.txt  sequence_test.bas  simple_click_test.bas  (+12 more)
.github/: copilot-instructions.md  copilot-instructions.md.backup
blib/: sdl2.bas  simple_ffi.bas  sqlite.bas
blib/graphics/: colors.bas  colors_new.bas  colours.bas  core.bas  textures.bas  textures_new.bas
examples/: advanced_arrays.bas  animated_graphics.bas  array_demo.bas  arrays.bas  basic_graphics_test.bas  basic_scope_test.bas  basic_test.bas  bool_test.bas  buffer_test.bas  calculator.bas  circle_demo.bas  circular_a.bas  circular_b.bas  clean_ffi_test.bas  color_test.bas  complex_expr_test.bas  complex_scope_test.bas  comprehensive_demo.bas  console_io_test.bas  constants_demo.bas  data_pipeline.bas  database_demo.bas  declare_only_test.bas  dependency_test.bas  direct_bool.bas  direct_texture_test.bas  drawing_demo.bas  duplicate_test.bas  ellipse_demo.bas  featuretest.bas  ffi_analysis.bas  ffi_comprehensive.bas  ffi_comprehensive_test.bas  ffi_debug.bas  ffi_debug2.bas  ffi_debug_detailed.bas  ffi_example.bas  ffi_extended.bas  ffi_gaps.bas  ffi_minimal.bas  (+106 more)
include/: ast.h  codegen.h  command_builder.h  common.h  console_io_handler.h  ffi.h  ffi_utils.h  header_parser.h  interpreter.h  io_handler.h  lexer.h  math_utils.h  memory_manager.h  parser.h  repl.h  rpi_gpio.h  rpi_i2c.h  rpi_pwm.h  rpi_serial.h  rpi_spi.h  runtime.h  safe_ffi.h  sdl_io_handler.h  sqlite_handler.h  terminal.h  type_utils.h  unified_value.h
include/glm/: ext.hpp  glm.cppm
include/glm/gtc/: color_space.hpp  color_space.inl  packing.inl
include/glm/gtx/: color_encoding.hpp  color_encoding.inl  color_space.hpp  color_space.inl  color_space_YCoCg.hpp  color_space_YCoCg.inl  gradient_paint.hpp
runtime/: basic_runtime.cpp  basic_runtime.h  sdl2_wrapper.cpp  sdl2_wrapper.h  sqlite3_wrapper.cpp  sqlite3_wrapper.h
src/: ast.cpp  codegen.cpp  command_builder.cpp  common.cpp  console_io_handler.cpp  ffi.cpp  ffi_utils.cpp  glibc_compat.c  header_parser.cpp  interpreter.cpp  io_handler.cpp  lexer.cpp  main.cpp  math_utils.cpp  memory_manager.cpp  parser.cpp  repl.cpp  rpi_gpio.cpp  rpi_i2c.cpp  rpi_pwm.cpp  rpi_serial.cpp  rpi_spi.cpp  runtime.cpp  safe_ffi.cpp  sdl_io_handler.cpp  sqlite_handler.cpp  terminal.cpp  type_utils.cpp  unified_value.cpp
tests/: integration_tests.cpp  lexer_tests.cpp  parser_tests.cpp  test_main.cpp
vscode-extension/: README.md  language-configuration.json  package-simple.json  package-test.json  package.json
vscode-extension/syntaxes/: rbasic.tmLanguage.json
